[gd_scene load_steps=2 format=3 uid="uid://wouky70rg5pj"]

[ext_resource type="Script" uid="uid://bhfxmachxx35w" path="res://scripts/shop_menu_small.gd" id="1_cx56u"]

[node name="ShopMenuSmall" type="Node2D"]
script = ExtResource("1_cx56u")

[node name="ColorRect" type="ColorRect" parent="."]
clip_contents = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -75.0
offset_right = 62.5
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.790294, 0.48249447, 0.13936883, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Item1" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer/VBoxContainer/Item1"]
clip_contents = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/Item1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Swords: 1"
clip_text = true

[node name="Item2" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer/VBoxContainer/Item2"]
clip_contents = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/Item2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Potions: 10"
clip_text = true

[node name="Item3" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer/VBoxContainer/Item3"]
clip_contents = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/Item3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Armour: 10"
clip_text = true

[node name="Item4" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer/VBoxContainer/Item4"]
clip_contents = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/Item4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Bows: 3"
clip_text = true

[node name="Item5" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
alignment = 1

[node name="ColorRect" type="ColorRect" parent="ColorRect/MarginContainer/VBoxContainer/Item5"]
clip_contents = true
custom_minimum_size = Vector2(25, 25)
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/Item5"]
layout_mode = 2
size_flags_horizontal = 3
text = "HP Potions: 13"
clip_text = true
